zoom effects; contact form

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ESME MADE THIS</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="contact.js" defer></script>
 </head>
 <body>
     <nav class="main-nav">
