--- a/index.html
+++ b/index.html
@@ -5,11 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ESME MADE THIS</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://js.hcaptcha.com/1/api.js" async defer></script>
     <script src="contact.js" defer></script>
 </head>
 <body>
+    <!-- Static form for Netlify's bots -->
+    <form name="contact-form" netlify netlify-honeypot="bot-field" hidden>
+        <input type="text" name="projectDescription" />
+        <input type="email" name="email" />
+        <textarea name="dimensions"></textarea>
+        <input type="file" name="images" multiple accept="image/*" />
+        <input type="text" name="bot-field" />
+        <div class="h-captcha" data-sitekey="002647de-b9be-476c-9a02-935a8d7878ec"></div>
+    </form>
+
     <nav class="main-nav">
-        <a href="feedback.html">feedback</a>
+        <a href="feedback.html">what people are saying</a>
+        <a href="#contact-section">get in touch</a>
     </nav>
     <div class="container">
         <h1>
@@ -18,5 +30,6 @@
             <span>T</span><span>H</span><span>I</span><span>S</span>
         </h1>
     </div>
+    <!-- Trigger new deployment -->
 </body>
 </html> 
