--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="styles.css">
     <script src="https://js.hcaptcha.com/1/api.js" async defer></script>
     <script src="contact.js" defer></script>
+    <script src="p5.min.js"></script>
+    <script src="sketch.js"></script>
 </head>
 <body>
     <!-- Static form for Netlify's bots -->
@@ -20,8 +22,10 @@
     </form>
 
     <nav class="main-nav">
+        
         <a href="feedback.html">what people are saying</a>
         <a href="#contact-section">get in touch</a>
+        
     </nav>
     <div class="container">
         <h1>
@@ -30,6 +34,11 @@
             <span>T</span><span>H</span><span>I</span><span>S</span>
         </h1>
     </div>
-    <!-- Trigger new deployment -->
+    <div id="defaultcanvas0">
+        <!-- Canvas content here -->
+    </div>
+    <div>
+        <button id="startButton">press</button>
+    </div>
 </body>
 </html> 
