now accepcting crypto

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         
     </nav>
     <div>
-        <button id="startButton">press</button>
+        <button id="startButton">UPDATE</button>
     </div>
     <div class="container">
         <h1>
