email page updated with email and styling

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <a href="feedback.html">what people are saying</a>
         <a href="animation.html">fun exciting news</a>
         <a href="tldr.html">TL;DR</a>
+        <a href="email.html">e-mail me</a>
     </nav>
     
 </body>
