--- a/email.html
+++ b/email.html
@@ -5,12 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact - Esme Made This</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script src="email-script.js" defer></script>
 </head>
 <body class="email-page">
     <a href="index.html" class="back-arrow">←</a>
     
     <div class="email-container">
+        <div class="typing-container">
+            <div id="typing-text"></div>
+        </div>
         <div class="email-letters">
             <div class="email-line">
                 <div class="letter" data-char="e">e</div>
