--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <nav class="main-nav">
         <a href="feedback.html">what people are saying</a>
         <a href="animation.html">fun exciting news</a>
+        <a href="portfolio.html">portfolio</a>
         <a href="tldr.html">TL;DR</a>
         <a href="email.html">e-mail me</a>
     </nav>
