main nav css improvements

--- a/index.html
+++ b/index.html
@@ -8,20 +8,22 @@
 </head>
 <body>
    
-    <div class="container">
-        <h1>
-            <span>E</span><span>S</span><span>M</span><span>E</span>
-            <span>M</span><span>A</span><span>D</span><span>E</span>
-            <span>T</span><span>H</span><span>I</span><span>S</span>
-        </h1>
+    <div class="main-header">
+        <nav class="main-nav">
+            <a href="feedback.html">what people are saying</a>
+            <a href="animation.html">fun exciting news</a>
+            <a href="portfolio.html">portfolio</a>
+            <a href="tldr.html">TL;DR</a>
+            <a href="email.html">e-mail me</a>
+        </nav>
+        <div class="container">
+            <h1>
+                <span>E</span><span>S</span><span>M</span><span>E</span>
+                <span>M</span><span>A</span><span>D</span><span>E</span>
+                <span class="no-break"><span>T</span><span>H</span><span>I</span><span>S</span></span>
+            </h1>
+        </div>
     </div>
-    <nav class="main-nav">
-        <a href="feedback.html">what people are saying</a>
-        <a href="animation.html">fun exciting news</a>
-        <a href="portfolio.html">portfolio</a>
-        <a href="tldr.html">TL;DR</a>
-        <a href="email.html">e-mail me</a>
-    </nav>
     
 </body>
 </html> 
