kitchen reno readme

--- a/portfolio.html
+++ b/portfolio.html
@@ -354,20 +354,19 @@
                 <div class="back-button" data-back-to="kitchen-renovation-window">← Back to Kitchen Renovation</div>
                 <div class="readme-text">
                     <h3>Kitchen Renovation Project</h3>
-                    <p><strong>Client:</strong> Atlanta Family Home</p>
-                    <p><strong>Project Type:</strong> Complete kitchen renovation with custom cabinetry</p>
-                    <p><strong>Timeline:</strong> 6 weeks</p>
-                    <p><strong>Materials:</strong> Solid maple cabinets, quartz countertops, soft-close hardware</p>
+                    <p><strong>Client:</strong> East Point Family Home</p>
+                    <p><strong>Project Type:</strong> Opened the wall with a pass-through to the dining room, replaced the old hood with a sleek, modern upgrade, and enclosed the duct in drywall. </p>
+                    <p><strong>Timeline:</strong> 2 weeks</p>
+                    <p><strong>Materials:</strong> Solid sapele countertop</p>
                     <p><strong>Features:</strong></p>
                     <ul>
-                        <li>Custom pantry with pull-out shelves</li>
-                        <li>Built-in spice rack</li>
-                        <li>Hidden trash and recycling bins</li>
-                        <li>Under-cabinet lighting</li>
-                        <li>Custom range hood enclosure</li>
+                        <li>Custom hardwood countertop shelf</li>
+                        <li>Trimless edges in pass-through/li>
+                        <li>Drywall enclosed duct system</li>
+                        <li>High-quality range hood replacement</li>
                     </ul>
-                    <p><strong>Challenges:</strong> Working around existing plumbing and electrical while maximizing storage space.</p>
-                    <p><strong>Result:</strong> Transformed cramped kitchen into functional, beautiful space with 40% more storage.</p>
+                    <p><strong>Challenges:</strong>The wall for the pass-through was a load bearing wall, so special precautions were taken to reinforce the strength of the wall where we were removiing preceding support structures. </p>
+                    <p><strong>Result:</strong> A modern, open kitchen that feels like it belongs in a magazine.</p>
                 </div>
             </div>
             <div class="window-statusbar">
