--- a/portfolio.html
+++ b/portfolio.html
@@ -355,7 +355,7 @@
                 <div class="readme-text">
                     <h3>Kitchen Renovation Project</h3>
                     <p><strong>Client:</strong> East Point Family Home</p>
-                    <p><strong>Project Type:</strong> Opened the wall with a pass-through to the dining room, replaced the old hood with a sleek, modern upgrade, and enclosed the duct in drywall. </p>
+                    <p><strong>Project Type:</strong> Opened the wall with a pass-through to the dining room, replaced the old hood with a sleek, modern upgrade, and enclosed the exposed duct in drywall. </p>
                     <p><strong>Timeline:</strong> 2 weeks</p>
                     <p><strong>Materials:</strong> Solid sapele countertop</p>
                     <p><strong>Features:</strong></p>
